--- a/frontend/pos/package.json
+++ b/frontend/pos/package.json
@@ -15,9 +15,11 @@
     "@tailwindcss/vite": "^4.0.3",
     "axios": "^1.7.9",
     "framer-motion": "^12.2.0",
+    "qrcode.react": "^4.2.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
+    "react-qr-code": "^2.0.15",
     "react-router-dom": "^7.1.5",
     "react-toastify": "^11.0.3",
     "tailwindcss": "^4.0.3",
