--- a/frontend/pos/package.json
+++ b/frontend/pos/package.json
@@ -16,6 +16,7 @@
 		"axios": "^1.7.9",
 		"date-fns": "^4.1.0",
 		"framer-motion": "^12.2.0",
+		"jspdf": "^3.0.1",
 		"qrcode.react": "^4.2.0",
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
@@ -24,6 +25,7 @@
 		"react-router-dom": "^7.1.5",
 		"react-spinners": "^0.15.0",
 		"react-toastify": "^11.0.3",
+		"recharts": "^2.15.1",
 		"tailwindcss": "^4.0.3",
 		"zustand": "^5.0.3"
 	},
