--- a/frontend/pos/package.json
+++ b/frontend/pos/package.json
@@ -15,6 +15,7 @@
 		"@tailwindcss/vite": "^4.0.3",
 		"axios": "^1.7.9",
 		"date-fns": "^4.1.0",
+		"decimal.js": "^10.5.0",
 		"framer-motion": "^12.2.0",
 		"jspdf": "^3.0.1",
 		"qrcode.react": "^4.2.0",
