--- a/frontend/pos/package.json
+++ b/frontend/pos/package.json
@@ -17,6 +17,7 @@
 		"date-fns": "^4.1.0",
 		"decimal.js": "^10.5.0",
 		"framer-motion": "^12.2.0",
+		"html2canvas": "^1.4.1",
 		"jspdf": "^3.0.1",
 		"qrcode.react": "^4.2.0",
 		"react": "^18.3.1",
