--- a/frontend/pos/package.json
+++ b/frontend/pos/package.json
@@ -13,6 +13,7 @@
 		"@headlessui/react": "^2.2.0",
 		"@heroicons/react": "^2.2.0",
 		"@tailwindcss/vite": "^4.0.3",
+		"@tanstack/react-query": "^5.74.4",
 		"axios": "^1.7.9",
 		"date-fns": "^4.1.0",
 		"decimal.js": "^10.5.0",
